fix connect to FE
