# src/routes/payments/payment.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express"
 import { wrapHandlerFunction } from "../../utils/wrapHandler"
 import { getPaymentUrlController, sepayWebhookController } from "../../controllers/payments/payment.controllers"
+import { accessTokenValidation, getUrlPaymentValidation } from "../../middlewares/guests/guest.middlewares"
 
 const paymentRouter = Router()
 
@@ -17,6 +18,11 @@ paymentRouter.post("/sepay-webhook", wrapHandlerFunction(sepayWebhookController)
  * Method: GET
  * Description: Lấy link QR thanh toán mới nhất cho đơn hàng
  */
-paymentRouter.get("/qr/:orderId", wrapHandlerFunction(getPaymentUrlController)) // nên validate orderId
+paymentRouter.get(
+  "/qr/:orderId",
+  accessTokenValidation,
+  getUrlPaymentValidation,
+  wrapHandlerFunction(getPaymentUrlController)
+) // nên validate orderId
 
 export default paymentRouter
